fonts fix + postgres alignments

--- a/adorApp-application/modules/adorApp-webapp/src/main/resources/webapp/resources/css/menu.css
+++ b/adorApp-application/modules/adorApp-webapp/src/main/resources/webapp/resources/css/menu.css
@@ -1,3 +1,14 @@
+@font-face {
+    /* generated with https://www.fontsquirrel.com/tools/webfont-generator, 2020-06-07 */
+    font-family: 'Oswald';
+    src: url('oswald-variablefont_wght-webfont.woff2') format('woff2'),
+         url('oswald-variablefont_wght-webfont.woff') format('woff'),
+         url('oswald-variablefont_wght-webfont.ttf') format('truetype'),
+         url('oswald-variablefont_wght-webfont.svg#oswaldregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 .navbar {
   background-color: #373737;
   /* background color will be black for all browsers */
